--- a/index.html
+++ b/index.html
@@ -1,1 +1,99 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="./css/styles.css">
+  <title>AltSchool Second Assignment</title>
+</head>
+
+<body>
+  <main class="wrapper">
+    <section class="left-section section">
+      <div class="left_content">
+        <div class="img_wrapper">
+          <img src="./images/Logo assignment.png" alt="logo" class="logo">
+        </div>
+        <h1>For Individuals</h1>
+        <div>
+          <p>Start benefiting from the wellness experience. For companies looking on increasing productivity, and
+            improving
+            organization wellness.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="right-section section">
+      <div class="right_content">
+        <div class="form-wrapper">
+          <form action="" method="post">
+            <div class="flex-split-sides">
+              <div class="form-container">
+                <div class="first-name">
+                  <label for="first-name">First Name</label>
+                  <input type="text" id="first-name" name="first-name" required value="Victoria">
+                </div>
+
+                <div class="gender">
+                  <label for="gender">Gender</label>
+                  <select name="gender" id="gender">
+                    <option value="" selected>Select Gender</option>
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                  </select>
+                </div>
+
+                <div class="weight">
+                  <label for="weight">Weight (KG)</label>
+                  <input type="text" id="weight" name="weight" required placeholder="Enter Weight">
+                </div>
+              </div>
+
+              <div class="form-container">
+                <div class="last-name">
+                  <label for="last-name">Last Name</label>
+                  <input type="text" id="last-name" name="last-name" required value="Oyebola">
+                </div>
+
+                <div class="D-O-B">
+                  <label for="date">Date of Birth</label>
+                  <input class="date" type="date" name="date" id="date" required>
+                </div>
+
+                <div class="height">
+                  <label for="height">Height (CM)</label>
+                  <input type="text" id="height" name="height" required placeholder="Enter Height">
+                </div>
+              </div>
+            </div>
+
+            <div class="form-full-length">
+              <label for="activity-level">Activity Level</label>
+              <select name="activity-level" id="activity-level" required>
+                <option value="level-1">Level 1</option>
+                <option value="level-2">Level 2</option>
+              </select>
+
+              <label for="password">Password</label>
+              <input type="password" required id="password" name="password">
+
+              <button class="button">Register</button>
+            </div>
+          </form>
+          <p>By clicking Register, you agree to our <a href="#">Terms of Use</a> and our <a href="#">Privacy
+              Policy</a>
+          </p>
+        </div>
+
+      </div>
+    </section>
+  </main>
+</body>
+
+</html>
