--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="left-section section">
       <div class="left_content">
         <div class="img_wrapper">
-          <img src="./images/Logo assignment.png" alt="logo" class="logo">
+          <img src="./images/logo.png" alt="logo" class="logo">
         </div>
         <h1>For Individuals</h1>
         <div>
